[package]
name = "proxer"
version = "0.1.0"
authors = ["Paul Maruhn <paulmaruhn@gmail.com>"]

description = "Access the ProxerMe API with Rust"
documentation = "https://docs.rs/proxer"
readme = "README.md"
keywords = ["proxer", "api", "interwebs"]
categories = ["api-bindings"]
license = "MIT"
license-file = "LICENSE"

[badges]
travis-ci = { repository = "cuechan/proxer-rs", branch = "master" }
maintenance = { status = "actively-developed" }



[dependencies]
futures = "0.1.14"
log = "0.3.8"
reqwest = "0.7.2"
serde = "1.0.8"
serde_derive = "1.0.10"
serde_json = "1.0.2"
tokio-core = "0.1.8"
chrono = "0.4.0"
colored = "1.5.3"
