[package]
name = "proxer"
version = "0.2.0"
authors = ["Paul Maruhn <paulmaruhn@gmail.com>"]

description = "Access the ProxerMe API with Rust"
documentation = "https://docs.rs/proxer"
readme = "README.md"
keywords = ["proxer", "api", "interwebs"]
categories = ["api-bindings"]
license = "MIT"

[badges]
travis-ci = { repository = "cuechan/proxer-rs", branch = "master" }
maintenance = { status = "actively-developed" }



[dependencies]
chrono = "0.4.0"
futures = "0.1.14"
log = "0.3.8"
reqwest = "0.8.1"
serde = "1.0.8"
serde_derive = "1.0.10"
serde_json = "1.0.2"
serde_urlencoded = "0.5.1"
hyper = "0.11.8"
void = "1.0.2"
pretty_env_logger = "0.1.1"



[[bin]]
name = "wip"
path = "src/wip.rs"
